--- a/litellm/proxy/proxy_config.yaml
+++ b/litellm/proxy/proxy_config.yaml
@@ -1,26 +1,13 @@
 model_list:
-  - model_name: aws/anthropic/bedrock-claude-3-5-sonnet-v1
+  - model_name: gemini/*
     litellm_params:
-      model: bedrock/us.anthropic.claude-3-5-sonnet-20240620-v1:0
-      aws_region_name: us-east-1
-      custom_llm_provider: bedrock
-  - model_name: aws/anthropic/bedrock-claude-3-5-sonnet-v1
-    litellm_params:
-      model: bedrock/us.anthropic.claude-3-5-sonnet-20240620-v1:0
-      aws_region_name: us-west-2
-      custom_llm_provider: bedrock
-    
+      model: gemini/*
+      api_key: AIzaSyA80y3HYIyqtPE5Db2RmLHEGE917ddIfWM
 
-# like MCPs/vector stores
-search_tools:
-  - search_tool_name: litellm-search
-    litellm_params:
-      search_provider: perplexity
-      api_key: os.environ/PERPLEXITYAI_API_KEY
-  - search_tool_name: exa-search
-    litellm_params:
-      search_provider: exa_ai
-      api_key: os.environ/EXA_API_KEY
-
-litellm_settings:
-  callbacks: ["datadog"]
+router_settings:
+  model_group_alias:
+    {
+      'gemini-2.5-pro': 'gemini/gemini-2.5-pro',
+      'gemini-2.5-flash': 'gemini/gemini-2.5-flash',
+      'gemini-2.5-flash-lite': 'gemini/gemini-2.5-flash-lite',
+    }
